--- a/src/compiled/css/index.css
+++ b/src/compiled/css/index.css
@@ -16,6 +16,8 @@
   --link-hover-color-rgb: 56, 134, 211;
   --light-color: #c5deff;
   --light-color-rgb: 197, 222, 255;
+  --body-background: #091018;
+  --body-color: #fafafa;
   --font-family-base: "Figtree", "Inter", "Segoe UI", Tahoma, Geneva, Verdana;
   --font-size-xs: calc(12px + 0 * 100vw);
   --font-size-sm: calc(12.8px + 0.000625 * 100vw);
@@ -30,8 +32,13 @@
   --font-weight-medium: 500;
   --font-weight-semibold: 600;
   --font-weight-bold: 700;
+}
+
+[data-theme=light] {
   --body-background: #091018;
   --body-color: #fafafa;
+  --light-color: #c5deff;
+  --light-color-rgb: 197, 222, 255;
 }
 
 *,
@@ -205,7 +212,78 @@ header p {
   color: rgba(var(--light-color-rgb), 0.75);
   margin-bottom: var(--sp-4);
 }
+header .theme {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: var(--sp-3);
+}
+header .theme ul {
+  margin: var(--sp-0);
+  padding: var(--sp-0);
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: var(--sp-3);
+}
+header .theme ul li {
+  color: rgba(var(--light-color-rgb), 0.75);
+  transition: color 0.2s linear;
+}
+header .theme ul li:hover {
+  color: var(--body-color);
+  cursor: pointer;
+}
+header .theme ul li.active {
+  color: var(--link-hover-color);
+}
+header ul.language__switcher li {
+  transform: scale(0.8);
+  transition: transform 0.2s linear;
+}
+header ul.language__switcher li.active {
+  transform: scale(1);
+}
+header ul.language__switcher li img {
+  user-select: none;
+}
+header .social-media {
+  width: 100%;
+  margin: var(--sp-0);
+  padding: var(--sp-0);
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: var(--sp-3);
+}
+header .social-media li a {
+  color: rgba(var(--light-color-rgb), 0.75);
+}
+header .social-media li a svg {
+  width: 24px;
+  height: 100%;
+  vertical-align: middle;
+}
+header .social-media li a:hover {
+  color: var(--body-color);
+}
 
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  gap: var(--sp-6);
+}
 main h1 {
   font-size: var(--font-size-3xl);
   font-weight: var(--font-weight-bold);
@@ -216,6 +294,43 @@ main p {
   font-size: var(--font-size-xl);
   font-weight: var(--font-weight-medium);
   color: rgba(var(--light-color-rgb), 0.85);
+}
+main .nav {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(10px);
+  border-radius: var(--sp-10);
+  position: fixed;
+  bottom: var(--sp-10);
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: var(--sp-1);
+  margin: var(--sp-0);
+  padding: var(--sp-0);
+  list-style: none;
+  padding: var(--sp-1);
+}
+main .nav li a {
+  display: block;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: var(--font-size-lg);
+  font-weight: var(--font-weight-semibold);
+  border-radius: var(--sp-10);
+  padding: var(--sp-1) var(--sp-2);
+  transition: all 0.2s linear;
+}
+main .nav li a svg {
+  vertical-align: middle;
+}
+main .nav .active {
+  background-color: var(--body-color);
+  color: var(--body-background);
 }
 
 .container {
