--- a/src/style/abstracts/__mixins.scss
+++ b/src/style/abstracts/__mixins.scss
@@ -23,9 +23,7 @@
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
-	}
-
-	@else {
+	} @else {
 		display: -webkit-box;
 		-webkit-line-clamp: $lines;
 		-webkit-box-orient: vertical;
@@ -38,7 +36,7 @@
 	padding: $padding;
 }
 
-@mixin list-reset( $margin: var(--sp-0), $padding: var(--sp-0)) {
+@mixin list-reset($margin: var(--sp-0), $padding: var(--sp-0)) {
 	margin: $margin;
 	padding: $padding;
 	list-style: none;
@@ -51,36 +49,4 @@
 	@if $gap !=0 {
 		gap: $gap;
 	}
-}
-
-@mixin transition($property: all, $duration: 0.2s, $timing-function: linear) {
-	transition: $property $duration $timing-function;
-}
-
-@mixin loading-animation($size: 30px) {
-	width: $size;
-	height: $size;
-	animation: loader 1s infinite linear;
-
-	@keyframes loader {
-		0% {
-			transform: rotate(0deg);
-			border-radius: 50%;
-		}
-
-		50% {
-			transform: rotate(90deg);
-			background-color: var(--color-primary);
-			border-radius: 0;
-		}
-
-		100% {
-			transform: rotate(180deg);
-			border-radius: 50%;
-		}
-	}
-}
-
-@mixin animation($name, $duration: 1s, $timing-function: ease, $delay: 0s, $iteration: 1, $direction: normal, $fill-mode: none) {
-	animation: $name $duration $timing-function $delay $iteration $direction $fill-mode;
 }
