--- a/src/style/abstracts/__variables.scss
+++ b/src/style/abstracts/__variables.scss
@@ -19,7 +19,11 @@ $brand-colors: (
 	'primary-color': #3886d3,
 	'link-hover-color': #3886d3,
 	'light-color': #c5deff,
-	'offer-card-background': #0b141e
+	'offer-card-background': #0b141e,
+	'message-success': #a2ff6c,
+	'message-error': #dc143c,
+	'message-warning': #ca693c,
+	'message-info': #1a56aa,
 );
 
 $light-colors: (
