--- a/src/style/home/__home.scss
+++ b/src/style/home/__home.scss
@@ -53,7 +53,7 @@ header {
 		}
 	}
 
-	ul.language__switcher {
+	ul.language-switcher {
 		li {
 			transform: scale(0.8);
 			transition: transform 0.2s linear;
@@ -240,6 +240,16 @@ main {
 
 			&:last-child {
 				margin-bottom: var(--sp-0);
+			}
+		}
+	}
+
+	.projects {
+		@include mx.list-reset;
+
+		li {
+			img {
+				max-width: 100%;
 			}
 		}
 	}
